Without map api

--- a/app/views/main/game.html.erb
+++ b/app/views/main/game.html.erb
@@ -33,7 +33,7 @@
     }
 </script>
 </body>
-<script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyD7GsmIWKbUv32iGbXTTNwXnSIAygfM7iE&callback=initMap"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&key=[YOUR KEY]&callback=initMap"></script>
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
