--- a/app/views/main/result.html.erb
+++ b/app/views/main/result.html.erb
@@ -34,6 +34,6 @@
       flightPath.setMap(map);
   }
 </script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyD7GsmIWKbUv32iGbXTTNwXnSIAygfM7iE&callback=initMap"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&key=[YOUR KEY[&callback=initMap"></script>
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script>
